--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations</h1>
-    <h2> First CICD Pipeline Execution </h2>
+    <h2> 1st Deployment CICD Pipeline </h2>
     <p> Click Here <a href="http://aws.amazon.com/documentation/codedeploy"> for Documentation</a>.</p>
   </div>
 </body>
