--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations</h1>
-    <h2> 1st Deployment CICD Pipeline </h2>
+    <h1>Fast Deployment</h1>
+    <h2> Second Time CICD Pipeline </h2>
     <p> Click Here <a href="http://aws.amazon.com/documentation/codedeploy"> for Documentation</a>.</p>
   </div>
 </body>
