--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Netflix Series</h1>
-    <h2> Game of Thrones Release 2 </h2>
+    <h2> Learn Git - Good Tool </h2>
     <p> Click Here <a href="http://aws.amazon.com/documentation/codedeploy"> for Documentation</a>.</p>
   </div>
 </body>
