--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Netflix Series</h1>
+    <h1>Session Completed</h1>
     <h2> Final Deployment - CICD pipeline demo </h2>
     <p> Click Here <a href="http://aws.amazon.com/documentation/codedeploy"> for Documentation</a>.</p>
   </div>
